Preceding column fixes, auto 24 column span add

--- a/css/demo.scss
+++ b/css/demo.scss
@@ -1,5 +1,5 @@
 /*CSS that is just for demo site purposes*/
-.mediaQTable {
+.demoTable {
 	font-size: 1.2em;
 	overflow: auto;
 	border: 1px solid #000;
