--- a/css/mscomGrid.scss
+++ b/css/mscomGrid.scss
@@ -1,5 +1,6 @@
 @import "mscomalize";
 @import "offsets";
+@import "manual-colspans";
 
 .grid {
     display: block;
@@ -69,6 +70,11 @@
     padding: 1em 1em;
     padding: -webkit-calc(1em + 0.5vh) 1vw;
     padding: calc(1em + 0.5vh) 1vw;
+    &.centered {
+        float: none;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 
 .col-1-3.nb {
@@ -87,8 +93,7 @@
     width: percentage(1 / 2);
 }
 
-.col-1-4.nb,
-.col-1-24 {
+.col-1-4.nb {
     width: percentage(1 / 4);
 }
 
@@ -100,7 +105,8 @@
     width: percentage(1 / 5);
 }
 
-.col-1-6.nb {
+.col-1-6.nb,
+.col-1-24 {
     width: percentage(1 / 6);
 }
 
@@ -116,6 +122,10 @@
     width: percentage(1 / 16);
 }
 
+.col-1-24.nb {
+    width: percentage(1 / 24);
+}
+
 .col-2-8,
 .col-2-12,
 .col-4-12,
@@ -123,13 +133,6 @@
 .col-4-16,
 .col-8-16 {
     width: percentage(1);
-}
-
-// Centered columns
-[class*="col-"].centered {
-    float: none;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 /*******************
@@ -149,7 +152,9 @@ BEGIN MEDIA QUERIES
     .col-1-4,
     .col-1-6,
     .col-1-8,
-    .col-2-12  {
+    .col-2-12,
+    .col-6-24,
+    .col-6-24 + .preceding-col-6-24  {
         width: percentage(1 / 2);
     }
 
@@ -170,8 +175,14 @@ BEGIN MEDIA QUERIES
     .col-2-6,
     .col-4-8,
     .col-3-4 + .col-1-4,
-    .preceding-col-1-4 {
+    .preceding-col-1-4,
+    .preceding-col-6-24,
+    .preceding-col-6-24 ~ .col-6-24 {
         width: percentage(1);
+    }
+
+    .col-1-24 {
+        width: percentage(1 / 12);
     }
 }
 
@@ -183,7 +194,8 @@ BEGIN MEDIA QUERIES
     .col-2-8,
     .col-6-8 ~ .col-1-8,
     .preceding-col-1-8,
-    .col-4-16 {
+    .col-4-16,
+    .col-12-24 {
         width: percentage(1 / 2);
     }
 
@@ -191,7 +203,11 @@ BEGIN MEDIA QUERIES
     .col-3-4 + .col-1-4,
     .preceding-col-1-4,
     .col-1-8,
-    .col-2-16 {
+    .col-2-16,
+    .col-6-24,
+    .preceding-col-6-24,
+    .col-6-24 + .preceding-col-6-24,
+    .preceding-col-6-24 ~ .col-6-24  {
         width: percentage(1 / 4);
     }
 
@@ -216,9 +232,16 @@ BEGIN MEDIA QUERIES
         width: percentage(1 / 3);
     }
 
-    .col-3-4 {
+    .col-3-4,
+    .col-1-8 + .preceding-col-1-8 {
         width: percentage(3 / 4);
     }
+
+    .col-2-6,
+    .col-1-6 + .preceding-col-1-6 {
+        width: percentage(2 / 3);
+    }
+
 
     .col-4-4,
     .col-3-6,
@@ -233,16 +256,12 @@ BEGIN MEDIA QUERIES
         width: percentage(1);
     }
 
-    .col-2-6 {
-        width: percentage(2 / 3);
-    }
-
     .col-1-16 {
         width: percentage(1 / 8);
     }
 
     .col-1-24 {
-        width: percentage(1 / 12);
+        width: percentage(1 / 24);
     }
 }
 
@@ -258,6 +277,7 @@ BEGIN MEDIA QUERIES
     .preceding-col-1-6,
     .col-1-6,
     .col-3-6 + .col-1-6,
+    .col-1-6 + .preceding-col-1-6,
     .col-2-12 {
         width: percentage(1 / 6);
     }
@@ -271,6 +291,7 @@ BEGIN MEDIA QUERIES
 
     .col-6-8 ~ .col-1-8,
     .preceding-col-1-8,
+    .col-1-8 + .preceding-col-1-8,
     .col-1-8,
     .col-1-16 {
         width: percentage(1 / 8);
@@ -297,10 +318,6 @@ BEGIN MEDIA QUERIES
 
     .col-1-12 {
         width: percentage(1 / 12);
-    }
-
-    .col-1-24 {
-        width: percentage(1 / 24);
     }
 }
 
