--- a/css/mscomGrid.css
+++ b/css/mscomGrid.css
@@ -1,204 +1,469 @@
-@media screen and (min-width: 320px) {
-  .row .xs-col-8-offset-1,
-  .row .xs-col-12-offset-1,
-  .row .xs-col-16-offset-2 {
-    margin-left: 50%; }
-  .row .xs-col-16-offset-1 {
-    margin-left: 25%; }
-  .row .xs-col-16-offset-3 {
-    margin-left: 150%; } }
+@media screen and (min-width: 768px) {
+  .row .m-col-2-offset-1 {
+    margin-left: 50%; } }
+@media screen and (min-width: 992px) {
+  .row .l-col-2-offset-1 {
+    margin-left: 50%; } }
+@media screen and (min-width: 1400px) {
+  .row .xl-col-2-offset-1 {
+    margin-left: 50%; } }
 @media screen and (min-width: 540px) {
   .row .s-col-3-offset-1 {
     margin-left: 33.33333%; }
   .row .s-col-3-offset-2 {
+    margin-left: 66.66667%; } }
+@media screen and (min-width: 768px) {
+  .row .m-col-3-offset-1 {
+    margin-left: 33.33333%; }
+  .row .m-col-3-offset-2 {
+    margin-left: 66.66667%; } }
+@media screen and (min-width: 992px) {
+  .row .l-col-3-offset-1 {
+    margin-left: 33.33333%; }
+  .row .l-col-3-offset-2 {
+    margin-left: 66.66667%; } }
+@media screen and (min-width: 1400px) {
+  .row .xl-col-3-offset-1 {
+    margin-left: 33.33333%; }
+  .row .xl-col-3-offset-2 {
+    margin-left: 66.66667%; } }
+@media screen and (min-width: 540px) {
+  .row .s-col-4-offset-1 {
+    margin-left: 50%; } }
+@media screen and (min-width: 768px) {
+  .row .m-col-4-offset-1 {
+    margin-left: 25%; }
+  .row .m-col-4-offset-2 {
+    margin-left: 50%; }
+  .row .m-col-4-offset-3 {
+    margin-left: 75%; } }
+@media screen and (min-width: 992px) {
+  .row .l-col-4-offset-1 {
+    margin-left: 25%; }
+  .row .l-col-4-offset-2 {
+    margin-left: 50%; }
+  .row .l-col-4-offset-3 {
+    margin-left: 75%; } }
+@media screen and (min-width: 1400px) {
+  .row .xl-col-4-offset-1 {
+    margin-left: 25%; }
+  .row .xl-col-4-offset-2 {
+    margin-left: 50%; }
+  .row .xl-col-4-offset-3 {
+    margin-left: 75%; } }
+@media screen and (min-width: 768px) {
+  .row .m-col-5-offset-1 {
+    margin-left: 20%; }
+  .row .m-col-5-offset-2 {
+    margin-left: 40%; }
+  .row .m-col-5-offset-3 {
+    margin-left: 60%; }
+  .row .m-col-5-offset-4 {
+    margin-left: 80%; } }
+@media screen and (min-width: 992px) {
+  .row .l-col-5-offset-1 {
+    margin-left: 20%; }
+  .row .l-col-5-offset-2 {
+    margin-left: 40%; }
+  .row .l-col-5-offset-3 {
+    margin-left: 60%; }
+  .row .l-col-5-offset-4 {
+    margin-left: 80%; } }
+@media screen and (min-width: 1400px) {
+  .row .xl-col-5-offset-1 {
+    margin-left: 20%; }
+  .row .xl-col-5-offset-2 {
+    margin-left: 40%; }
+  .row .xl-col-5-offset-3 {
+    margin-left: 60%; }
+  .row .xl-col-5-offset-4 {
+    margin-left: 80%; } }
+@media screen and (min-width: 540px) {
+  .row .s-col-6-offset-1 {
+    margin-left: 50%; } }
+@media screen and (min-width: 768px) {
+  .row .m-col-6-offset-1 {
+    margin-left: 33.33333%; }
+  .row .m-col-6-offset-2 {
+    margin-left: 66.66667%; } }
+@media screen and (min-width: 992px) {
+  .row .l-col-6-offset-1 {
+    margin-left: 16.66667%; }
+  .row .l-col-6-offset-2 {
+    margin-left: 33.33333%; }
+  .row .l-col-6-offset-3 {
+    margin-left: 50%; }
+  .row .l-col-6-offset-4 {
     margin-left: 66.66667%; }
-  .row .s-col-12-offset-1,
+  .row .l-col-6-offset-5 {
+    margin-left: 83.33333%; } }
+@media screen and (min-width: 1400px) {
+  .row .xl-col-6-offset-1 {
+    margin-left: 16.66667%; }
+  .row .xl-col-6-offset-2 {
+    margin-left: 33.33333%; }
+  .row .xl-col-6-offset-3 {
+    margin-left: 50%; }
+  .row .xl-col-6-offset-4 {
+    margin-left: 66.66667%; }
+  .row .xl-col-6-offset-5 {
+    margin-left: 83.33333%; } }
+@media screen and (min-width: 320px) {
+  .row .xs-col-8-offset-1 {
+    margin-left: 50%; } }
+@media screen and (min-width: 540px) {
+  .row .s-col-8-offset-1 {
+    margin-left: 50%; } }
+@media screen and (min-width: 768px) {
+  .row .m-col-8-offset-1 {
+    margin-left: 25%; }
+  .row .m-col-8-offset-2 {
+    margin-left: 50%; }
+  .row .m-col-8-offset-3 {
+    margin-left: 75%; } }
+@media screen and (min-width: 992px) {
+  .row .l-col-8-offset-1 {
+    margin-left: 12.5%; }
+  .row .l-col-8-offset-2 {
+    margin-left: 25%; }
+  .row .l-col-8-offset-3 {
+    margin-left: 37.5%; }
+  .row .l-col-8-offset-4 {
+    margin-left: 50%; }
+  .row .l-col-8-offset-5 {
+    margin-left: 62.5%; }
+  .row .l-col-8-offset-6 {
+    margin-left: 75%; }
+  .row .l-col-8-offset-7 {
+    margin-left: 87.5%; } }
+@media screen and (min-width: 1400px) {
+  .row .xl-col-8-offset-1 {
+    margin-left: 12.5%; }
+  .row .xl-col-8-offset-2 {
+    margin-left: 25%; }
+  .row .xl-col-8-offset-3 {
+    margin-left: 37.5%; }
+  .row .xl-col-8-offset-4 {
+    margin-left: 50%; }
+  .row .xl-col-8-offset-5 {
+    margin-left: 62.5%; }
+  .row .xl-col-8-offset-6 {
+    margin-left: 75%; }
+  .row .xl-col-8-offset-7 {
+    margin-left: 87.5%; } }
+@media screen and (min-width: 320px) {
+  .row .xs-col-12-offset-1 {
+    margin-left: 50%; } }
+@media screen and (min-width: 540px) {
+  .row .s-col-12-offset-1 {
+    margin-left: 25%; }
+  .row .s-col-12-offset-2 {
+    margin-left: 50%; }
+  .row .s-col-12-offset-3 {
+    margin-left: 75%; } }
+@media screen and (min-width: 768px) {
+  .row .m-col-12-offset-1 {
+    margin-left: 25%; }
+  .row .m-col-12-offset-2 {
+    margin-left: 50%; }
+  .row .m-col-12-offset-3 {
+    margin-left: 75%; } }
+@media screen and (min-width: 992px) {
+  .row .l-col-12-offset-1 {
+    margin-left: 8.33333%; }
+  .row .l-col-12-offset-2 {
+    margin-left: 16.66667%; }
+  .row .l-col-12-offset-3 {
+    margin-left: 25%; }
+  .row .l-col-12-offset-4 {
+    margin-left: 33.33333%; }
+  .row .l-col-12-offset-5 {
+    margin-left: 41.66667%; }
+  .row .l-col-12-offset-6 {
+    margin-left: 50%; }
+  .row .l-col-12-offset-7 {
+    margin-left: 58.33333%; }
+  .row .l-col-12-offset-8 {
+    margin-left: 66.66667%; }
+  .row .l-col-12-offset-9 {
+    margin-left: 75%; }
+  .row .l-col-12-offset-10 {
+    margin-left: 83.33333%; }
+  .row .l-col-12-offset-11 {
+    margin-left: 91.66667%; } }
+@media screen and (min-width: 1400px) {
+  .row .xl-col-12-offset-1 {
+    margin-left: 8.33333%; }
+  .row .xl-col-12-offset-2 {
+    margin-left: 16.66667%; }
+  .row .xl-col-12-offset-3 {
+    margin-left: 25%; }
+  .row .xl-col-12-offset-4 {
+    margin-left: 33.33333%; }
+  .row .xl-col-12-offset-5 {
+    margin-left: 41.66667%; }
+  .row .xl-col-12-offset-6 {
+    margin-left: 50%; }
+  .row .xl-col-12-offset-7 {
+    margin-left: 58.33333%; }
+  .row .xl-col-12-offset-8 {
+    margin-left: 66.66667%; }
+  .row .xl-col-12-offset-9 {
+    margin-left: 75%; }
+  .row .xl-col-12-offset-10 {
+    margin-left: 83.33333%; }
+  .row .xl-col-12-offset-11 {
+    margin-left: 91.66667%; } }
+@media screen and (min-width: 320px) {
+  .row .xs-col-16-offset-1 {
+    margin-left: 25%; }
+  .row .xs-col-16-offset-2 {
+    margin-left: 50%; }
+  .row .xs-col-16-offset-3 {
+    margin-left: 75%; } }
+@media screen and (min-width: 540px) {
   .row .s-col-16-offset-1 {
     margin-left: 25%; }
-  .row .s-col-4-offset-1,
-  .row .s-col-6-offset-1,
-  .row .s-col-8-offset-1,
-  .row .s-col-12-offset-2,
   .row .s-col-16-offset-2 {
     margin-left: 50%; }
-  .row .s-col-12-offset-3,
   .row .s-col-16-offset-3 {
     margin-left: 75%; } }
 @media screen and (min-width: 768px) {
   .row .m-col-16-offset-1 {
     margin-left: 12.5%; }
-  .row .m-col-5-offset-1 {
-    margin-left: 20%; }
-  .row .m-col-4-offset-1,
-  .row .m-col-8-offset-1,
-  .row .m-col-12-offset-1,
   .row .m-col-16-offset-2 {
     margin-left: 25%; }
-  .row .m-col-3-offset-1,
-  .row .m-col-6-offset-1 {
-    margin-left: 33.33333%; }
   .row .m-col-16-offset-3 {
     margin-left: 37.5%; }
-  .row .m-col-5-offset-2 {
-    margin-left: 40%; }
-  .row .m-col-2-offset-1,
-  .row .m-col-4-offset-2,
-  .row .m-col-8-offset-2,
-  .row .m-col-12-offset-2,
   .row .m-col-16-offset-4 {
     margin-left: 50%; }
-  .row .m-col-5-offset-3 {
-    margin-left: 60%; }
   .row .m-col-16-offset-5 {
     margin-left: 62.5%; }
-  .row .m-col-3-offset-2,
-  .row .m-col-6-offset-2 {
-    margin-left: 66.66667%; }
-  .row .m-col-4-offset-3,
-  .row .m-col-8-offset-3,
-  .row .m-col-12-offset-3,
   .row .m-col-16-offset-6 {
     margin-left: 75%; }
-  .row .m-col-5-offset-4 {
-    margin-left: 80%; }
   .row .m-col-16-offset-7 {
     margin-left: 87.5%; } }
 @media screen and (min-width: 992px) {
-  .row .l-col-12-offset-1 {
-    margin-left: 8.33333%; }
-  .row .l-col-8-offset-1,
   .row .l-col-16-offset-1 {
     margin-left: 12.5%; }
-  .row .l-col-6-offset-1,
-  .row .l-col-12-offset-2 {
-    margin-left: 16.66667%; }
-  .row .l-col-5-offset-1 {
-    margin-left: 20%; }
-  .row .l-col-4-offset-1,
-  .row .l-col-8-offset-2,
-  .row .l-col-12-offset-3,
   .row .l-col-16-offset-2 {
     margin-left: 25%; }
-  .row .l-col-3-offset-1,
-  .row .l-col-6-offset-2,
-  .row .l-col-12-offset-4 {
-    margin-left: 33.33333%; }
-  .row .l-col-8-offset-3,
   .row .l-col-16-offset-3 {
     margin-left: 37.5%; }
-  .row .l-col-5-offset-2 {
-    margin-left: 40%; }
-  .row .l-col-12-offset-5 {
-    margin-left: 41.66667%; }
-  .row .l-col-2-offset-1,
-  .row .l-col-4-offset-2,
-  .row .l-col-6-offset-3,
-  .row .l-col-8-offset-4,
-  .row .l-col-12-offset-6,
   .row .l-col-16-offset-4 {
     margin-left: 50%; }
-  .row .l-col-12-offset-7 {
-    margin-left: 58.33333%; }
-  .row .l-col-5-offset-3 {
-    margin-left: 60%; }
-  .row .l-col-8-offset-5,
   .row .l-col-16-offset-5 {
     margin-left: 62.5%; }
-  .row .l-col-3-offset-2,
-  .row .l-col-6-offset-4,
-  .row .l-col-12-offset-8 {
-    margin-left: 66.66667%; }
-  .row .l-col-4-offset-3,
-  .row .l-col-8-offset-6,
-  .row .l-col-12-offset-9,
   .row .l-col-16-offset-6 {
     margin-left: 75%; }
-  .row .l-col-5-offset-4 {
-    margin-left: 80%; }
-  .row .l-col-6-offset-5,
-  .row .l-col-12-offset-10 {
-    margin-left: 83.33333%; }
-  .row .l-col-8-offset-7,
   .row .l-col-16-offset-7 {
-    margin-left: 87.5%; }
-  .row .l-col-12-offset-11 {
-    margin-left: 91.66667%; } }
+    margin-left: 87.5%; } }
 @media screen and (min-width: 1400px) {
   .row .xl-col-16-offset-1 {
     margin-left: 6.25%; }
-  .row .xl-col-12-offset-1 {
-    margin-left: 8.33333%; }
-  .row .xl-col-8-offset-1,
   .row .xl-col-16-offset-2 {
     margin-left: 12.5%; }
-  .row .xl-col-6-offset-1,
-  .row .xl-col-12-offset-2 {
-    margin-left: 16.66667%; }
   .row .xl-col-16-offset-3 {
     margin-left: 18.75%; }
-  .row .xl-col-5-offset-1 {
-    margin-left: 20%; }
-  .row .xl-col-4-offset-1,
-  .row .xl-col-8-offset-2,
-  .row .xl-col-12-offset-3,
   .row .xl-col-16-offset-4 {
     margin-left: 25%; }
   .row .xl-col-16-offset-5 {
     margin-left: 31.25%; }
-  .row .xl-col-3-offset-1,
-  .row .xl-col-6-offset-2,
-  .row .xl-col-12-offset-4 {
-    margin-left: 33.33333%; }
-  .row .xl-col-8-offset-3,
   .row .xl-col-16-offset-6 {
     margin-left: 37.5%; }
-  .row .xl-col-5-offset-2 {
-    margin-left: 40%; }
-  .row .xl-col-12-offset-5 {
-    margin-left: 41.66667%; }
   .row .xl-col-16-offset-7 {
     margin-left: 43.75%; }
-  .row .xl-col-2-offset-1,
-  .row .xl-col-4-offset-2,
-  .row .xl-col-6-offset-3,
-  .row .xl-col-8-offset-4,
-  .row .xl-col-12-offset-6,
   .row .xl-col-16-offset-8 {
     margin-left: 50%; }
   .row .xl-col-16-offset-9 {
     margin-left: 56.25%; }
-  .row .xl-col-12-offset-7 {
-    margin-left: 58.33333%; }
-  .row .xl-col-5-offset-3 {
-    margin-left: 60%; }
-  .row .xl-col-8-offset-5,
   .row .xl-col-16-offset-10 {
     margin-left: 62.5%; }
-  .row .xl-col-3-offset-2,
-  .row .xl-col-6-offset-4,
-  .row .xl-col-12-offset-8 {
-    margin-left: 66.66667%; }
   .row .xl-col-16-offset-11 {
     margin-left: 68.75%; }
-  .row .xl-col-4-offset-3,
-  .row .xl-col-8-offset-6,
-  .row .xl-col-12-offset-9,
   .row .xl-col-16-offset-12 {
     margin-left: 75%; }
-  .row .xl-col-5-offset-4 {
-    margin-left: 80%; }
   .row .xl-col-16-offset-13 {
     margin-left: 81.25%; }
-  .row .xl-col-6-offset-5,
-  .row .xl-col-12-offset-10 {
-    margin-left: 83.33333%; }
-  .row .xl-col-8-offset-7,
   .row .xl-col-16-offset-14 {
     margin-left: 87.5%; }
-  .row .xl-col-12-offset-11 {
-    margin-left: 91.66667%; }
   .row .xl-col-16-offset-15 {
     margin-left: 93.75%; } }
+@media screen and (min-width: 320px) {
+  .row .xs-col-24-offset-1 {
+    margin-left: 16.66667%; }
+  .row .xs-col-24-offset-2 {
+    margin-left: 33.33333%; }
+  .row .xs-col-24-offset-3 {
+    margin-left: 50%; }
+  .row .xs-col-24-offset-4 {
+    margin-left: 66.66667%; }
+  .row .xs-col-24-offset-5 {
+    margin-left: 83.33333%; } }
+@media screen and (min-width: 540px) {
+  .row .s-col-24-offset-1 {
+    margin-left: 8.33333%; }
+  .row .s-col-24-offset-2 {
+    margin-left: 16.66667%; }
+  .row .s-col-24-offset-3 {
+    margin-left: 25%; }
+  .row .s-col-24-offset-4 {
+    margin-left: 33.33333%; }
+  .row .s-col-24-offset-5 {
+    margin-left: 41.66667%; }
+  .row .s-col-24-offset-6 {
+    margin-left: 50%; }
+  .row .s-col-24-offset-7 {
+    margin-left: 58.33333%; }
+  .row .s-col-24-offset-8 {
+    margin-left: 66.66667%; }
+  .row .s-col-24-offset-9 {
+    margin-left: 75%; }
+  .row .s-col-24-offset-10 {
+    margin-left: 83.33333%; }
+  .row .s-col-24-offset-11 {
+    margin-left: 91.66667%; } }
+@media screen and (min-width: 768px) {
+  .row .m-col-24-offset-1 {
+    margin-left: 4.16667%; }
+  .row .m-col-24-offset-2 {
+    margin-left: 8.33333%; }
+  .row .m-col-24-offset-3 {
+    margin-left: 12.5%; }
+  .row .m-col-24-offset-4 {
+    margin-left: 16.66667%; }
+  .row .m-col-24-offset-5 {
+    margin-left: 20.83333%; }
+  .row .m-col-24-offset-6 {
+    margin-left: 25%; }
+  .row .m-col-24-offset-7 {
+    margin-left: 29.16667%; }
+  .row .m-col-24-offset-8 {
+    margin-left: 33.33333%; }
+  .row .m-col-24-offset-9 {
+    margin-left: 37.5%; }
+  .row .m-col-24-offset-10 {
+    margin-left: 41.66667%; }
+  .row .m-col-24-offset-11 {
+    margin-left: 45.83333%; }
+  .row .m-col-24-offset-12 {
+    margin-left: 50%; }
+  .row .m-col-24-offset-13 {
+    margin-left: 54.16667%; }
+  .row .m-col-24-offset-14 {
+    margin-left: 58.33333%; }
+  .row .m-col-24-offset-15 {
+    margin-left: 62.5%; }
+  .row .m-col-24-offset-16 {
+    margin-left: 66.66667%; }
+  .row .m-col-24-offset-17 {
+    margin-left: 70.83333%; }
+  .row .m-col-24-offset-18 {
+    margin-left: 75%; }
+  .row .m-col-24-offset-19 {
+    margin-left: 79.16667%; }
+  .row .m-col-24-offset-20 {
+    margin-left: 83.33333%; }
+  .row .m-col-24-offset-21 {
+    margin-left: 87.5%; }
+  .row .m-col-24-offset-22 {
+    margin-left: 91.66667%; }
+  .row .m-col-24-offset-23 {
+    margin-left: 95.83333%; } }
+@media screen and (min-width: 992px) {
+  .row .l-col-24-offset-1 {
+    margin-left: 4.16667%; }
+  .row .l-col-24-offset-2 {
+    margin-left: 8.33333%; }
+  .row .l-col-24-offset-3 {
+    margin-left: 12.5%; }
+  .row .l-col-24-offset-4 {
+    margin-left: 16.66667%; }
+  .row .l-col-24-offset-5 {
+    margin-left: 20.83333%; }
+  .row .l-col-24-offset-6 {
+    margin-left: 25%; }
+  .row .l-col-24-offset-7 {
+    margin-left: 29.16667%; }
+  .row .l-col-24-offset-8 {
+    margin-left: 33.33333%; }
+  .row .l-col-24-offset-9 {
+    margin-left: 37.5%; }
+  .row .l-col-24-offset-10 {
+    margin-left: 41.66667%; }
+  .row .l-col-24-offset-11 {
+    margin-left: 45.83333%; }
+  .row .l-col-24-offset-12 {
+    margin-left: 50%; }
+  .row .l-col-24-offset-13 {
+    margin-left: 54.16667%; }
+  .row .l-col-24-offset-14 {
+    margin-left: 58.33333%; }
+  .row .l-col-24-offset-15 {
+    margin-left: 62.5%; }
+  .row .l-col-24-offset-16 {
+    margin-left: 66.66667%; }
+  .row .l-col-24-offset-17 {
+    margin-left: 70.83333%; }
+  .row .l-col-24-offset-18 {
+    margin-left: 75%; }
+  .row .l-col-24-offset-19 {
+    margin-left: 79.16667%; }
+  .row .l-col-24-offset-20 {
+    margin-left: 83.33333%; }
+  .row .l-col-24-offset-21 {
+    margin-left: 87.5%; }
+  .row .l-col-24-offset-22 {
+    margin-left: 91.66667%; }
+  .row .l-col-24-offset-23 {
+    margin-left: 95.83333%; } }
+@media screen and (min-width: 1400px) {
+  .row .xl-col-24-offset-1 {
+    margin-left: 4.16667%; }
+  .row .xl-col-24-offset-2 {
+    margin-left: 8.33333%; }
+  .row .xl-col-24-offset-3 {
+    margin-left: 12.5%; }
+  .row .xl-col-24-offset-4 {
+    margin-left: 16.66667%; }
+  .row .xl-col-24-offset-5 {
+    margin-left: 20.83333%; }
+  .row .xl-col-24-offset-6 {
+    margin-left: 25%; }
+  .row .xl-col-24-offset-7 {
+    margin-left: 29.16667%; }
+  .row .xl-col-24-offset-8 {
+    margin-left: 33.33333%; }
+  .row .xl-col-24-offset-9 {
+    margin-left: 37.5%; }
+  .row .xl-col-24-offset-10 {
+    margin-left: 41.66667%; }
+  .row .xl-col-24-offset-11 {
+    margin-left: 45.83333%; }
+  .row .xl-col-24-offset-12 {
+    margin-left: 50%; }
+  .row .xl-col-24-offset-13 {
+    margin-left: 54.16667%; }
+  .row .xl-col-24-offset-14 {
+    margin-left: 58.33333%; }
+  .row .xl-col-24-offset-15 {
+    margin-left: 62.5%; }
+  .row .xl-col-24-offset-16 {
+    margin-left: 66.66667%; }
+  .row .xl-col-24-offset-17 {
+    margin-left: 70.83333%; }
+  .row .xl-col-24-offset-18 {
+    margin-left: 75%; }
+  .row .xl-col-24-offset-19 {
+    margin-left: 79.16667%; }
+  .row .xl-col-24-offset-20 {
+    margin-left: 83.33333%; }
+  .row .xl-col-24-offset-21 {
+    margin-left: 87.5%; }
+  .row .xl-col-24-offset-22 {
+    margin-left: 91.66667%; }
+  .row .xl-col-24-offset-23 {
+    margin-left: 95.83333%; } }
 @media screen and (min-width: 320px) {
   .row .xs-col-2-24,
   .row .xs-col-8-24 {
