--- a/css/mscomGrid.scss
+++ b/css/mscomGrid.scss
@@ -1,7 +1,29 @@
+//------------------------------------
+//          #IMPORTS
+//------------------------------------
 @import "config";
 @import "offsets";
 @import "manual-colspans";
 
+
+
+
+
+//Not assuming use of picchu or other library for box-sizing border-box
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+
+
+
+
+//------------------------------------
+//          #GRID, ROW, COL
+//------------------------------------
 .grid {
     display: block;
     position: relative;
@@ -77,6 +99,13 @@
     }
 }
 
+
+
+
+
+//------------------------------------
+//          #MOBILE FIRST SIZES
+//------------------------------------
 .col-1-3.nb {
     width: percentage(1 / 3);
 }
@@ -135,9 +164,13 @@
     width: percentage(1);
 }
 
-/*******************
-BEGIN MEDIA QUERIES
-*******************/
+
+
+
+
+//------------------------------------
+//          #MEDIA QUERIES
+//------------------------------------
 @media screen and (min-width: $vp1) {
     .col-1-16 {
         width: percentage(1 / 4);
@@ -338,6 +371,8 @@ BEGIN MEDIA QUERIES
         width: percentage(1 / 2);
     }
 }
+
+
 
 // Reducing padding to a reasonable size for "extremely" large displays
 @media screen and (min-width: 2000px) {
