Replace simple quotes by double quotes

--- a/css/_offsets.scss
+++ b/css/_offsets.scss
@@ -1,10 +1,10 @@
-@import 'offsets/offsetsall';
-// @import 'offsets/offsets2';
-// @import 'offsets/offsets3';
-// @import 'offsets/offsets4';
-// @import 'offsets/offsets5';
-// @import 'offsets/offsets6';
-// @import 'offsets/offsets8';
-// @import 'offsets/offsets12';
-// @import 'offsets/offsets16';
-// @import 'offsets/offsets24';
+@import "offsets/offsetsall";
+// @import "offsets/offsets2";
+// @import "offsets/offsets3";
+// @import "offsets/offsets4";
+// @import "offsets/offsets5";
+// @import "offsets/offsets6";
+// @import "offsets/offsets8";
+// @import "offsets/offsets12";
+// @import "offsets/offsets16";
+// @import "offsets/offsets24";
