--- a/css/demo/picchu/picchu.scss
+++ b/css/demo/picchu/picchu.scss
@@ -3,7 +3,7 @@
 //------------------------------------
 //              #IMPORTS
 //------------------------------------
-@import 'normalize';
+@import "normalize";
 
 
 
