--- a/css/offsets/_offsetsall.scss
+++ b/css/offsets/_offsetsall.scss
@@ -1,9 +1,9 @@
-@import 'offsets2';
-@import 'offsets3';
-@import 'offsets4';
-@import 'offsets5';
-@import 'offsets6';
-@import 'offsets8';
-@import 'offsets12';
-@import 'offsets16';
-@import 'offsets24';
+@import "offsets2";
+@import "offsets3";
+@import "offsets4";
+@import "offsets5";
+@import "offsets6";
+@import "offsets8";
+@import "offsets12";
+@import "offsets16";
+@import "offsets24";
