--- a/css/mscomGrid.scss
+++ b/css/mscomGrid.scss
@@ -131,16 +131,17 @@ html {
 //------------------------------------
 //          #MOBILE FIRST SIZES
 //------------------------------------
-.col-1-3.nb {
+.col-1-3.nb, .col-2-6.nb {
     width: percentage(1 / 3);
 }
 
-.col-2-3.nb {
+.col-2-3.nb, .col-4-6.nb {
     width: percentage(2 / 3);
 }
 
 .col-1-2.nb,
 .col-2-4.nb,
+.col-3-6.nb,
 .col-1-8,
 .col-1-12,
 .col-1-16 {
