--- a/css/_offsets.scss
+++ b/css/_offsets.scss
@@ -1,3 +1,13 @@
+$vp1prefix: xs;
+$vp2prefix: s;
+$vp3prefix: m;
+$vp4prefix: l;
+$vp5prefix: xl;
+
+
+
+
+
 @import "offsets/offsetsall";
 // @import "offsets/offsets2";
 // @import "offsets/offsets3";
