--- a/css/offsets/_offsets4.scss
+++ b/css/offsets/_offsets4.scss
@@ -4,42 +4,4 @@ $vp3columns: 4;
 $vp4columns: 4;
 $vp5columns: 4;
 
-@media screen and (min-width: $vp2) {
-    .row {
-        @for $i from 1 to $vp2columns {
-            .s-col-#{$columns}-offset-#{$i} {
-                margin-#{$left}: percentage($i / $vp2columns);
-            }
-        }
-    }
-}
-
-@media screen and (min-width: $vp3) {
-    .row {
-        @for $i from 1 to $vp3columns {
-            .m-col-#{$columns}-offset-#{$i} {
-                margin-#{$left}: percentage($i / $vp3columns);
-            }
-        }
-    }
-}
-
-@media screen and (min-width: $vp4) {
-    .row {
-        @for $i from 1 to $vp4columns {
-            .l-col-#{$columns}-offset-#{$i} {
-                margin-#{$left}: percentage($i / $vp4columns);
-            }
-        }
-    }
-}
-
-@media screen and (min-width: $vp5) {
-    .row {
-        @for $i from 1 to $vp5columns {
-            .xl-col-#{$columns}-offset-#{$i} {
-                margin-#{$left}: percentage($i / $vp5columns);
-            }
-        }
-    }
-}
+@import "offsetlogic";
