--- a/css/_config.scss
+++ b/css/_config.scss
@@ -1,5 +1,6 @@
 $max-grid-width: 1600px;
 $fixed-col-margin: 2px; //4px fixed margin, gets doubled
+$grid-prefix: "ms-";
 $vp1: 320px;
 $vp2: 540px;
 $vp3: 768px;
