Adjusting demo classes to prefixing
Signed-off-by: Kyle Zinter <kylezinter@live.com>

--- a/css/demo/demo.scss
+++ b/css/demo/demo.scss
@@ -2,7 +2,7 @@
 @import "picchu/picchu";
 
 
-.row {
+.ms-row {
 	margin-bottom: 1em;
 }
 
@@ -107,7 +107,7 @@ input[type="button"]:hover, input[type="button"]:focus {
 	background-color: #00A1F1;
 }
 
-.grid {
+.ms-grid {
 	h1, h2, h3, h4, h5, h6 {
 		margin: 0;
 	}
